--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div class="girdi">
         <input type="number" name="input_numara" id="input_numara" />
         <button class="input_submit" id="input_submit">CHECK</button>
+        <button class="input_reset" id="input_reset">RESET</button>
       </div>
       <img
         src="./img/favpng_homer-simpson-bart-simpson-drawing-pub-quiz-thought.png"
